userland/gettext-1.0/gettext-runtime/intl/gnulib-lib/pthread.h

#   define pthread_t rpl_pthread_t
#   define pthread_attr_t rpl_pthread_attr_t
typedef glwthread_thread_t pthread_t;
typedef unsigned int pthread_attr_t;
#   define pthread_t rpl_pthread_t
#   define pthread_attr_t rpl_pthread_attr_t
typedef int pthread_t;
typedef unsigned int pthread_attr_t;
typedef int pthread_t;
typedef unsigned int pthread_attr_t;
#   define pthread_mutex_t rpl_pthread_mutex_t
#   define pthread_mutexattr_t rpl_pthread_mutexattr_t
typedef struct
        {
          int type;
          union
            {
              glwthread_timedmutex_t    u_timedmutex;
              glwthread_timedrecmutex_t u_timedrecmutex;
            }
          u;
        }
        pthread_mutex_t;
typedef unsigned int pthread_mutexattr_t;
#  define PTHREAD_MUTEX_INITIALIZER { 1, { GLWTHREAD_TIMEDMUTEX_INIT } }
#   define pthread_mutex_t rpl_pthread_mutex_t
#   define pthread_mutexattr_t rpl_pthread_mutexattr_t
typedef int pthread_mutex_t;
typedef unsigned int pthread_mutexattr_t;
#  define PTHREAD_MUTEX_INITIALIZER { 0 }
typedef int pthread_mutex_t;
typedef unsigned int pthread_mutexattr_t;
#  define PTHREAD_MUTEX_INITIALIZER { 0 }
#   define pthread_cond_t rpl_pthread_cond_t
#   define pthread_condattr_t rpl_pthread_condattr_t
typedef glwthread_cond_t pthread_cond_t;
typedef unsigned int pthread_condattr_t;
#  define PTHREAD_COND_INITIALIZER GLWTHREAD_COND_INIT
#   define pthread_cond_t rpl_pthread_cond_t
#   define pthread_condattr_t rpl_pthread_condattr_t
typedef int pthread_cond_t;
typedef unsigned int pthread_condattr_t;
#  define PTHREAD_COND_INITIALIZER { 0 }
typedef int pthread_cond_t;
typedef unsigned int pthread_condattr_t;
#  define PTHREAD_COND_INITIALIZER { 0 }
#   define pthread_create rpl_pthread_create
#   define pthread_join rpl_pthread_join
#   define pthread_mutex_lock rpl_pthread_mutex_lock
#   define pthread_mutex_trylock rpl_pthread_mutex_trylock
#   define pthread_mutex_unlock rpl_pthread_mutex_unlock
#   define pthread_cond_wait rpl_pthread_cond_wait
#   define pthread_cond_signal rpl_pthread_cond_signal
#   define pthread_cond_broadcast rpl_pthread_cond_broadcast
/* Provide the symbols required by mingw's <bits/gthr-default.h>.  */
using GNULIB_NAMESPACE::pthread_create;
using GNULIB_NAMESPACE::pthread_join;
using GNULIB_NAMESPACE::pthread_mutex_lock;
using GNULIB_NAMESPACE::pthread_mutex_trylock;
using GNULIB_NAMESPACE::pthread_mutex_unlock;
using GNULIB_NAMESPACE::pthread_cond_wait;
using GNULIB_NAMESPACE::pthread_cond_signal;
using GNULIB_NAMESPACE::pthread_cond_broadcast;